--- a/src/App.css
+++ b/src/App.css
@@ -220,7 +220,9 @@ a {
   padding: 0 10px;
 }
 
-.navigation li {
+.navigation a {
+  color: #fff;
+  text-decoration: none;
   font-weight: 400;
   padding: 7px 10px;
   font-size: 14px;
@@ -229,12 +231,7 @@ a {
   border-radius: 3px;
 }
 
-.navigation a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.navigation li:hover {
+.navigation a:hover {
   background: var(--red);
   cursor: pointer;
 }
